--- a/FrontEndProject/views/login.ejs
+++ b/FrontEndProject/views/login.ejs
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-<div class="header"></div>
+<%- include('../views/navbar.ejs')%>
 <div class="square mx-auto">
     <h1 id="title">Авторизация</h1>
     <div>Email</div>
