--- a/FrontEndProject/views/menu.ejs
+++ b/FrontEndProject/views/menu.ejs
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <script src="/js/jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="/css/registration.css">
-    <link rel="stylesheet" type="text/css" href="/css/menu.css">
+    <link rel="stylesheet" type="text/css" href="../css/registration.css">
+    <link rel="stylesheet" type="text/css" href="../css/menu.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script type="text/javascript" src="js/menu.js"></script>
@@ -16,7 +16,7 @@
 <div class="header"></div>
 <div class="menu-square mx-auto">
 
-    <nav class="second-navbar navbar navbar-expand-lg navbar-custom">
+    <nav class="second-navbar navbar navbar-expand-xl navbar-custom">
         <div class="container-fluid">
             <button class="navbar-toggler navbar-toggler-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent2" aria-controls="navbarSupportedContent2" aria-expanded="false" aria-label="Переключатель навигации">
                 <span class="navbar-toggler-icon"></span>
@@ -42,7 +42,6 @@
                             <option value="RatingDesc">Рейтинг &darr</option>
                         </select>
                     </div>
-
                     <div class=" nav-item-2 marg">
                         <label class="switch data-field">
                             <input class="clicker" type="checkbox">
