--- a/FrontEndProject/views/navbar.ejs
+++ b/FrontEndProject/views/navbar.ejs
@@ -17,10 +17,10 @@
                 <li class="nav-item">
                     <a class="nav-link active" href="http://localhost:3000/">Меню</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item optional2" style="display: none">
                     <a class="nav-link active" href="#">Заказы</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item optional2" style="display: none">
                     <a class="nav-link active" href="#">Корзина</a>
                 </li>
             </ul>
