--- a/FrontEndProject/views/navbar.ejs
+++ b/FrontEndProject/views/navbar.ejs
@@ -21,7 +21,7 @@
                     <a class="nav-link active" href="#">Заказы</a>
                 </li>
                 <li class="nav-item optional2" style="display: none">
-                    <a class="nav-link active" href="#">Корзина</a>
+                    <a class="nav-link active" href="http://localhost:3000/cart">Корзина</a>
                 </li>
             </ul>
 
