--- a/FrontEndProject/views/cart.ejs
+++ b/FrontEndProject/views/cart.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <script src="/js/jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="/css/registration.css">
+    <link rel="stylesheet" type="text/css" href="../css/registration.css">
     <link rel="stylesheet" type="text/css" href="/css/cart.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -29,7 +29,19 @@
                 <div class="dish-cost">Цена/шт: </div>
             </div>
 
-            <div class="counter col-md-auto ">count</div>
+            <div class="counter col-md-auto ">
+                <div class="row inside">
+                    <div class="input-group">
+                                    <span class="input-group-btn">
+                                        <button type="button" class="quantity-left-minus button2" >-</button>
+                                    </span>
+                                    <input type="text" id="quantity" name="quantity" class="input-number" value="1" min="1" max="100">
+                                    <span class="input-group-btn">
+                                        <button type="button" class="quantity-right-plus button2" >+</button>
+                                    </span>
+                    </div>
+                </div>
+            </div>
         </div>
         <button class="delete-button button ">Удалить</button>
 
