--- a/FrontEndProject/views/menu.ejs
+++ b/FrontEndProject/views/menu.ejs
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="/js/jquery.min.js"></script>
+
+
     <link rel="stylesheet" type="text/css" href="../css/registration.css">
     <link rel="stylesheet" type="text/css" href="../css/menu.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
@@ -68,10 +69,23 @@
         <div class="star-rating">text</div>
         <div class="dish-text">text</div>
         <div class="dish-id" style="display:none"></div>
-        <div class="flexspace"></div>
-        <div class="dish-footer row ">
-            <div class="dish-cost col-8 align-text-bottom">Цена - </div>
-            <button class="add-button button col-4"> В корзину</button>
+        <div class="flexspace dish-flex"></div>
+    </div>
+    <div class="dish-footer row ">
+        <div class="dish-cost col-8 align-text-bottom">Цена - </div>
+        <button class="add-button button col-4"> В корзину</button>
+        <div class="counter col-md-auto col-4" style="display: none">
+            <div class="row inside">
+                <div class="input-group">
+                                    <span class="input-group-btn">
+                                        <button type="button" class="quantity-left-minus button2" >-</button>
+                                    </span>
+                    <input type="text" id="quantity" name="quantity" class="input-number" value="1" min="1" max="100">
+                    <span class="input-group-btn">
+                                        <button type="button" class="quantity-right-plus button2" >+</button>
+                                    </span>
+                </div>
+            </div>
         </div>
     </div>
 </div>
