--- a/FrontEndProject/views/navbar.ejs
+++ b/FrontEndProject/views/navbar.ejs
@@ -20,8 +20,9 @@
                     <a class="nav-link active" href="#">Заказы</a>
                 </li>
                 <li class="nav-item optional2" style="display: none">
-                    <a class="nav-link active" href="http://localhost:3000/cart">Корзина</a>
+                    <a class="nav-link active" href="http://localhost:3000/cart">Корзина<span class="dish-amount" style="display: ">1</span></a>
                 </li>
+
             </ul>
 
             <div class="nav-item my-sm-0 right optional " style="display: none">
