--- a/FrontEndProject/views/cart.ejs
+++ b/FrontEndProject/views/cart.ejs
@@ -8,14 +8,14 @@
     <link rel="stylesheet" type="text/css" href="/css/cart.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <script type="text/javascript" src="/js/cart.js"></script>
+    <script type="module" src="/js/cart.js"></script>
 </head>
 <body>
 <%- include('../views/navbar.ejs')%>
 <div class="cart-square mx-auto">
     <h2>Товары в корзине</h2>
-
-    <div class="cart-dish-box mx-auto " >
+<div class="cart-dish-list">
+    <div class="cart-dish-box mx-auto " style="display: none">
 
         <div class="row">
 
@@ -46,7 +46,7 @@
         <button class="delete-button button ">Удалить</button>
 
     </div>
-
+</div>
 </div>
 <div class="flexspace"></div>
 <div class="footer"></div>
