--- a/FrontEndProject/views/navbar.ejs
+++ b/FrontEndProject/views/navbar.ejs
@@ -19,7 +19,7 @@
                     <a class="nav-link active" href="http://localhost:3000/">Меню</a>
                 </li>
                 <li class="nav-item optional2" style="display: none">
-                    <a class="nav-link active" href="#">Заказы</a>
+                    <a class="nav-link active" href="http://localhost:3000/orders">Заказы</a>
                 </li>
                 <li class="nav-item optional2" style="display: none">
                     <a class="nav-link active" href="http://localhost:3000/cart">Корзина<span class="dish-amount">1</span></a>
@@ -40,7 +40,7 @@
             </div>
 
             <div class="nav-item my-sm-0 right optional2 logout" style="display: none">
-                <a class="nav-link active">Выйти</a>
+                <a class="nav-link active" href="#">Выйти</a>
             </div>
 
         </div>
