--- a/FrontEndProject/views/orders.ejs
+++ b/FrontEndProject/views/orders.ejs
@@ -6,10 +6,30 @@
 
 
     <link rel="stylesheet" type="text/css" href="../css/registration.css">
-    <link rel="stylesheet" type="text/css" href="../css/menu.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <script type="module" src="js/menu.js"></script>
+    <link rel="stylesheet" type="text/css" href="../css/orders.css">
+    <script type="module" src="js/orders.js"></script>
 
 </head>
 <body>
+<%- include('../views/navbar.ejs')%>
+<div class="orders-square mx-auto">
+    <div class="inside-square">
+        <div>В корзине есть блюда, можно оформить заказ</div>
+        <button class="place-button ">Оформить</button>
+    </div>
+    <h1>Последние заказы</h1>
+    <div class="orders-list">
+        <div class="order-box mx-auto " >
+            <div class="orderDate">Заказ от <span class="date">20.04.2022</span></div>
+            <div>Статус заказа - <span class="status">В обработке</span></div>
+            <div class="delivered" >Доставлен: <span class="date">20.04.2022</span> <span class="time">18:25</span></div>
+            <div class="unDelivered" style="display: none">Доставка ожидается в <span class="time">18:25</span></div>
+            <div class="accept-button"></div>
+        </div>
+
+    </div>
+</div>
+<div class="flexspace"></div>
+<div class="footer"></div>
+</body>
+</html>
