--- a/FrontEndProject/views/orders.ejs
+++ b/FrontEndProject/views/orders.ejs
@@ -24,7 +24,8 @@
             <div>Статус заказа - <span class="status">В обработке</span></div>
             <div class="delivered" >Доставлен: <span class="date">20.04.2022</span> <span class="time">18:25</span></div>
             <div class="unDelivered" style="display: none">Доставка ожидается в <span class="time">18:25</span></div>
-            <div class="accept-button"></div>
+            <button class="accept-button">Подтвердить доставку</button>
+            <div class="cost-container"><span style="font-weight: bold">Стоимость заказа: </span><span class="dish-cost">1200</span><span> руб.</span></div>
         </div>
 
     </div>
