--- a/FrontEndProject/views/orders.ejs
+++ b/FrontEndProject/views/orders.ejs
@@ -15,7 +15,7 @@
 <div class="orders-square mx-auto">
     <div class="inside-square">
         <div>В корзине есть блюда, можно оформить заказ</div>
-        <button class="place-button ">Оформить</button>
+         <a class="nav-link active place-button" href="http://localhost:3000/purchase">Оформить</a>
     </div>
     <h1>Последние заказы</h1>
     <div class="orders-list">
