--- a/FrontEndProject/views/menu.ejs
+++ b/FrontEndProject/views/menu.ejs
@@ -61,6 +61,7 @@
 <div class="dish-list">
 <div class="dish-box" style="display:none" >
     <img src="https://bipbap.ru/wp-content/uploads/2017/04/0_7c779_5df17311_orig.jpg" class="image-size">
+    <img src="../images/leaf.png" class="vegetarian" style="display: none">
     <div class="padding-box">
         <h5 class="dish-name"> </h5>
         <div class="category-name">Категория блюда - </div>
