--- a/FrontEndProject/views/navbar.ejs
+++ b/FrontEndProject/views/navbar.ejs
@@ -36,7 +36,7 @@
             </div>
 
             <div class="nav-item my-sm-0 right optional2" style="display: none">
-                <div class="mail"></div>
+                <a class="mail nav-link active" href="http://localhost:3000/profile"></a>
             </div>
 
             <div class="nav-item my-sm-0 right optional2 logout" style="display: none">
