--- a/FrontEndProject/views/orders.ejs
+++ b/FrontEndProject/views/orders.ejs
@@ -13,18 +13,20 @@
 <body>
 <%- include('../views/navbar.ejs')%>
 <div class="orders-square mx-auto">
-    <div class="inside-square">
+    <div class="inside-square" style="display: none">
         <div>В корзине есть блюда, можно оформить заказ</div>
          <a class="nav-link active place-button" href="http://localhost:3000/purchase">Оформить</a>
     </div>
     <h1>Последние заказы</h1>
     <div class="orders-list">
-        <div class="order-box mx-auto " >
-            <div class="orderDate">Заказ от <span class="date">20.04.2022</span></div>
-            <div>Статус заказа - <span class="status">В обработке</span></div>
-            <div class="delivered" >Доставлен: <span class="date">20.04.2022</span> <span class="time">18:25</span></div>
-            <div class="unDelivered" style="display: none">Доставка ожидается в <span class="time">18:25</span></div>
-            <button class="accept-button">Подтвердить доставку</button>
+        <div class="order-box mx-auto "  style="display: none">
+            <div class="clickable-order-box">
+                <div class="orderDate">Заказ от <span class="date">20.04.2022</span></div>
+                <div>Статус заказа - <span class="status">Доставлен</span></div>
+                <div class="delivered" >Доставлен: <span class="date2">20.04.2022</span> <span class="time">18:25</span></div>
+                <div class="unDelivered" style="display: none">Доставка ожидается <span class="date3"></span> в <span class="time2">18:25</span></div>
+            </div>
+            <button class="accept-button" style="display: none">Подтвердить доставку</button>
             <div class="cost-container"><span style="font-weight: bold">Стоимость заказа: </span><span class="dish-cost">1200</span><span> руб.</span></div>
         </div>
 
