--- a/FrontEndProject/views/item.ejs
+++ b/FrontEndProject/views/item.ejs
@@ -19,7 +19,11 @@
         <div class="isVegetarian text-center">text</div>
         <br>
         <div class="dish-description text-center">text</div>
-        <div class="star-rating text-center">text</div>
+        <div class="star-box mx-auto">
+            <div class="stars-outer">
+                <div class="stars-inner"></div>
+            </div>
+        </div>
         <div class="dish-cost text-center">Цена: </div>
     </div>
 </div>
