--- a/FrontEndProject/views/menu.ejs
+++ b/FrontEndProject/views/menu.ejs
@@ -65,7 +65,12 @@
     <div class="padding-box">
         <h5 class="dish-name"> </h5>
         <div class="category-name">Категория блюда - </div>
-        <div class="star-rating">text</div>
+        <div class="star-box">
+        <div class="stars-outer">
+            <div class="stars-inner"></div>
+        </div>
+        </div>
+        <span class="number-rating"></span>
         <div class="dish-text">text</div>
         <div class="dish-id" style="display:none"></div>
         <div class="flexspace dish-flex"></div>
