--- a/FrontEndProject/public/css/menu.css
+++ b/FrontEndProject/public/css/menu.css
@@ -52,6 +52,7 @@
     height: 140px;
 }
 .padding-box{
+
     padding: 0px 10px;
 }
 .category-name{
@@ -197,4 +198,37 @@ input:checked + .slider:before {
     right:5px;
     height: 25px;
 
+}
+.stars-outer{
+    position: relative;
+    display: inline-block;
+}
+.stars-inner{
+    position: absolute;
+    top:0;
+    left: 0;
+    white-space: nowrap;
+    overflow: hidden;
+    width: 0;
+}
+.stars-outer::before{
+
+    content: "\f005 \f005 \f005 \f005 \f005 \f005 \f005 \f005 \f005 \f005";
+    font-family: "Font Awesome 5 Free";
+    font-weight: 100;
+    color: black;
+
+}
+.stars-inner::before{
+    content: "\f005 \f005 \f005 \f005 \f005 \f005 \f005 \f005 \f005 \f005";
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    color: #f8ce0b;
+}
+.star-box{
+    text-align: center;
+    border-width: 1px!important;
+    position: relative;
+    border-style: solid;
+    border-color: lightgrey;
 }
