--- a/FrontEndProject/views/cart.ejs
+++ b/FrontEndProject/views/cart.ejs
@@ -33,7 +33,7 @@
                                     <span class="input-group-btn">
                                         <button type="button" class="quantity-left-minus button2" >-</button>
                                     </span>
-                                    <input type="text" id="quantity" name="quantity" class="input-number" value="1" min="1" max="100">
+                                    <input type="text" id="quantity" name="quantity" class="input-number" value="1" min="1" max="100" disabled="disabled">
                                     <span class="input-group-btn">
                                         <button type="button" class="quantity-right-plus button2" >+</button>
                                     </span>
