--- a/FrontEndProject/views/item.ejs
+++ b/FrontEndProject/views/item.ejs
@@ -6,7 +6,7 @@
     <script src="/js/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="/css/registration.css">
     <link rel="stylesheet" type="text/css" href="/css/item.css">
-    <script type="text/javascript" src="/js/item.js"></script>
+    <script type="module" src="/js/item.js"></script>
 </head>
 <body>
 
