--- a/FrontEndProject/views/order.ejs
+++ b/FrontEndProject/views/order.ejs
@@ -11,7 +11,7 @@
 <div class="order-square mx-auto">
     <div class="card">
         <div class="card-header">
-            <h3>Заказ # <span>0000</span></h3>
+            <h3>Заказ от <span class="date-of-order">0000</span></h3>
         </div>
         <div class="card-body">
             <div>Дата заказа: <span class="order-date">tete</span></div>
