--- a/FrontEndProject/views/login.ejs
+++ b/FrontEndProject/views/login.ejs
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Авторизация</title>
     <script src="/js/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="/css/registration.css">
     <script type="module" src="/js/login.js"></script>
