--- a/FrontEndProject/views/menu.ejs
+++ b/FrontEndProject/views/menu.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Меню</title>
 
 
     <link rel="stylesheet" type="text/css" href="../css/registration.css">
@@ -35,10 +35,10 @@
                         <select class="selector data-field" type="text" name="name" required="required">
                             <option value="NameAsc">А-Я</option>
                             <option value="NameDesc">Я-А</option>
-                            <option value="PriceAsc">Цена &uarr</option>
-                            <option value="PriceDesc">Цена &darr</option>
-                            <option value="RatingAsc">Рейтинг &uarr</option>
-                            <option value="RatingDesc">Рейтинг &darr</option>
+                            <option value="PriceAsc">Цена ↑</option>
+                            <option value="PriceDesc">Цена ↓</option>
+                            <option value="RatingAsc">Рейтинг ↑</option>
+                            <option value="RatingDesc">Рейтинг ↓</option>
                         </select>
                     </div>
                     <div class=" nav-item-2 marg">
