--- a/FrontEndProject/views/orders.ejs
+++ b/FrontEndProject/views/orders.ejs
@@ -2,9 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-
-
+    <title>Заказы</title>
     <link rel="stylesheet" type="text/css" href="../css/registration.css">
     <link rel="stylesheet" type="text/css" href="../css/orders.css">
     <script type="module" src="js/orders.js"></script>
