--- a/FrontEndProject/views/cart.ejs
+++ b/FrontEndProject/views/cart.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Корзина</title>
     <script src="/js/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="../css/registration.css">
     <link rel="stylesheet" type="text/css" href="/css/cart.css">
