--- a/FrontEndProject/views/order.ejs
+++ b/FrontEndProject/views/order.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Заказ</title>
     <script src="/js/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="../css/order.css">
     <script type="module" src="../js/order.js"></script>
