--- a/FrontEndProject/views/purchase.ejs
+++ b/FrontEndProject/views/purchase.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Покупка</title>
     <script src="/js/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="/css/purchase.css">
     <script type="module" src="/js/purchase.js"></script>
