--- a/FrontEndProject/views/registration.ejs
+++ b/FrontEndProject/views/registration.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Регистрация</title>
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <link rel="stylesheet" type="text/css" href="/css/registration.css">
     <script type="module" src="js/registration.js"></script>
